# GBAE

./: .gitignore  CMakeLists.txt  README.md  clang-format.txt:Zone.Identifier
docs/: cycle_counting.md
gba_docs/: arm_instruction_summary.md  gbatek.md
gbae/: CMakeLists.txt  main.c
include/: arm_instructions.h  bus.h  cart.h  clock.h  common.h  cpu.h  gamepad.h  io.h  ppu.h  ram.h  ui.h
lib/: CMakeLists.txt  arm_instructions.c  bus.c  cart.c  clock.c  cpu.c  gamepad.c  io.c  ppu.c  ram.c  ui.c
